--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "lightbox": "^0.5.0",
+    "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
+    "simple": "^0.2.0",
     "simplelightbox": "^2.10.3"
   },
   "devDependencies": {
